actualización y mejoras al diseño css y la estructura html

--- a/boot-camp.html
+++ b/boot-camp.html
@@ -12,8 +12,8 @@
   <body id="boot-camp" class="inicio">
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
-      <main role="main" class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img
             class="img-50"
             src="../public/images/bootCamp.png"
@@ -28,7 +28,7 @@
           </p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="index.html" class="migas">>>Todas las categorías</a>
             <div id="card-container" class="cards boot-camp"></div>
