--- a/cursosMDN.html
+++ b/cursosMDN.html
@@ -11,8 +11,8 @@
   <body id="inicio">
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
-      <main role="main" class="conMenu-right-left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <div class="grupo-left">
             <h3>TEMARIO</h3>
             <div class="menuAside">
@@ -62,7 +62,7 @@
           </div>
         </aside>
 
-        <section>
+        <section class="section-default">
           <a href="../page/mdn.html" class="migas">>>Regresar a MDN Web Docs</a>
           <h1>Aprende Desarrollo Web con MDN</h1>
           <hr class="hrCorto" />
