--- a/herramientas.html
+++ b/herramientas.html
@@ -13,8 +13,8 @@
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
 
-      <main class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img
             class="img-50"
             src="../public/images/herramientas.png"
@@ -24,7 +24,7 @@
           <p>Descarga tus herramientas técnologicas y comienza a programar.</p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="index.html" class="migas">>>Todas las categorías</a>
             <h2>Técnología</h2>
