--- a/index.html
+++ b/index.html
@@ -7,31 +7,30 @@
     <title>Mapa de Aprendizaje para Desarrolladores Web</title>
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/cards.css" />
+    <link rel="stylesheet" href="/css/blocks.css" />
   </head>
 
   <body id="inicio">
     <div id="root">
-      <div id="bloque0" class="bloque0"></div>
-
       <header id="menuAppHeader" class="header"></header>
 
-      <div class="bloque1">
+      <div class="block-text-center">
         <h1>Mapa de Aprendizaje para Desarrolladores Web</h1>
         <h2>Enfócate, practica y avanza</h2>
       </div>
 
-      <main class="conMenu">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <h1>APRENDE DESARROLLO WEB</h1>
           <p>
-            Bienvenido a <strong>Code R11</strong>, tu ruta de aprendizaje
+            Bienvenido a <strong>Code R11</strong>, tu mapa de aprendizaje
             activo para dominar el diseño y desarrollo web. Un proyecto enfocado
             en el ecosistema y gran potencial de JavaScript como pilar
             fundamental para tu aprendizaje.
           </p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <div id="card-container" class="cards"></div>
           </article>
@@ -56,9 +55,9 @@
         </section>
       </main>
 
-      <div class="bloque2 parrafos fondo-amarillo">
-        <div class="bloque3 parrafos fondo-amarillo">
-          <div class="bloque3-item-left">
+      <section class="section-blocks block-background-yellow">
+        <article class="article-block-text-image">
+          <div class="block-text">
             <h2>ENFÓCATE, PRACTICA Y AVANZA</h2>
             <p>
               El proyecto Code R11, nace con el objetivo de mostrarte el camino
@@ -84,170 +83,165 @@
               gran potencial.
             </p>
           </div>
-          <div class="bloque2-item-left">
+          <div class="block-image">
             <img
               src="/public/images/app/logo-Literal-Code-R11-base1.png"
               alt="Logo Literal Code R11"
             />
           </div>
-        </div>
-      </div>
-      <div class="bloque-texto-centrado">
-        <div class="resaltar">
-          <h2>
-            <strong>ENFÓCATE</strong> en aprender y dominar los fundamentos del
-            diseño y desarrollo web
+        </article>
+      </section>     
+
+      <div class="block-text-center">
+        <div class="resaltar-texto">
+          <h2><strong>1. ENFÓCATE</strong><br />
+          ... en aprender y dominar los fundamentos del diseño y desarrollo web
+        </h2>
+        <h2>
+            <strong>2. PRACTICA</strong><br />
+            ... tu código y adopta buenas prácticas
           </h2>
-          <h2><strong>PRACTICA</strong> tu código y adopta buenas prácticas</h2>
           <h2>
-            <strong>Y AVANZA</strong> no te detengas, conviértete en el mejor
-            programador que tú puedes llegar a ser.
+            <strong>3. AVANZA</strong><br />
+            ...no te detengas, conviértete en el mejor programador que tú puedes
+            llegar a ser.
           </h2>
         </div>
       </div>
+      
+      <section class="section-blocks block-background-yellow">
+        <article class="article-block-text-image">
+          <div class="block-image">
+            <div class="multiples-imagenes">
+              <img src="/public/images/app/html.jpg" alt="HTML" />
+              <img src="/public/images/app/css.jpg" alt="CSS" />
+              <img src="/public/images/app/javascript.jpg" alt="JavaScript" />
+            </div>
+            <div class="multiples-imagenes">
+              <img
+                src="/public/images/app/visual-studio-code.jpg"
+                alt="VS Code"
+              />
+              <img src="/public/images/app/git-scm.png" alt="Git" />
+              <img src="/public/images/app/github.png" alt="GitHub" />
+            </div>
+          </div>
 
-      <div class="bloque2 parrafos fondo-amarillo">
-        <div class="bloque2-item-left imagen-porcentaje">
-          <a href="">
-            <img src="/public/images/app/html.jpg" alt="HTML" />
-          </a>
-          <a href="">
-            <img src="/public/images/app/css.jpg" alt="CSS" />
-          </a>
-          <a href="">
-            <img src="/public/images/app/javascript.jpg" alt="JavaScript" />
-          </a>
-          <br />
-          <a href="">
-            <img
-              src="/public/images/app/visual-studio-code.jpg"
-              alt="VS Code"
-            />
-          </a>
-          <a href="">
-            <img src="/public/images/app/git-scm.png" alt="Git" />
-          </a>
-          <a href="">
-            <img src="/public/images/app/github.png" alt="GitHub" />
-          </a>
-        </div>
+          <div class="block-text">
+            <h2>FUNDAMENTOS PARA EL DESARROLLO WEB</h2>
+            <p>
+              Tu primer gran reto, consiste en dominar los fundamentos del
+              desarrollo web. Nuestra misión es que todo nuevo programador se
+              construya una base sólida con los tres pilares básicos del
+              desarrollo web moderno.
+            </p>
+            <h3>Concéntrate primero en Aprender y Practicar la base</h3>
+            <ul>
+              <li>
+                <b>HTML:</b> Lenguaje de marcado para la estructura y
+                elaboración de páginas web.
+              </li>
+              <li>
+                <b>CSS:</b> Lenguaje de diseño gráfico para definir el Estilo y
+                diseño de un documento HTML.
+              </li>
+              <li>
+                <b>JavaScript:</b> Lenguaje de programación de secuencias de
+                comandos
+              </li>
+            </ul>
 
-        <div class="bloque2-item-right">
-          <h2>FUNDAMENTOS PARA EL DESARROLLO WEB</h2>
-          <p>
-            Tu primer gran reto, consiste en dominar los fundamentos del
-            desarrollo web. Nuestra misión es que todo nuevo programador se
-            construya una base sólida con los tres pilares básicos del
-            desarrollo web moderno.
-          </p>
-          <h3>Concéntrate primero en Aprender y Practicar la base</h3>
-          <ul>
-            <li>
-              <b>HTML:</b> Lenguaje de marcado para la estructura y elaboración
-              de páginas web.
-            </li>
-            <li>
-              <b>CSS:</b> Lenguaje de diseño gráfico para definir el Estilo y
-              diseño de un documento HTML.
-            </li>
-            <li>
-              <b>JavaScript:</b> Lenguaje de programación de secuencias de
-              comandos
-            </li>
-          </ul>
+            <h3>Domina estás Herramientas y Plataformas</h3>
+            <ul>
+              <li><b>Visual Studio Code:</b> Editor de código fuente.</li>
+              <li>
+                <b>Git:</b> Sistema de control de versiones para el registro de
+                los cambios de un proyecto.
+              </li>
+              <li>
+                <b>GitHub:</b> Plataforma de Desarrollo para alojar proyectos
+                utilizando el sistema de control de versiones Git.
+              </li>
+            </ul>
+          </div>
+        </article>
+      </section>
 
-          <h3>Domina estás Herramientas y Plataformas</h3>
-          <ul>
-            <li><b>Visual Studio Code:</b> Editor de código fuente.</li>
-            <li>
-              <b>Git:</b> Sistema de control de versiones para el registro de
-              los cambios de un proyecto.
-            </li>
-            <li>
-              <b>GitHub:</b> Plataforma de Desarrollo para alojar proyectos
-              utilizando el sistema de control de versiones Git.
-            </li>
-          </ul>
-        </div>
-      </div>
+      <section class="section-blocks">
+        <article class="article-block-text-image">
+          <div class="block-text">
+            <h2>DESARROLLO WEB FRONT-END</h2>
+            <p>
+              Aprende a diseñar y estructurar tus páginas web del lado del
+              navegador. Construye aplicaciones y sitios web legibles y fácil de
+              usar para que el usuario pueda tener una experiencia
+              satisfactoria.
+            </p>
+            <ul>
+              <li>
+                <b>Node.JS:</b> Es un entorno de ejecución multiplataforma para
+                la capa del servidor.
+              </li>
+              <li>
+                <b>React:</b> Biblioteca JavaScript para crear interfaces de
+                usuario.
+              </li>
+              <li>
+                <b>TypeScript:</b> Lenguaje de programación para desarrollar
+                aplicaciones JavaScript que añade tipos estáticos y objetos
+                basados en clases.
+              </li>
+              <li>
+                <b>SWR:</b> Biblioteca React Hooks para la obtención de datos.
+              </li>
+              <li>
+                <b>Sass:</b> Lenguaje de hojas de estilo compilado en CSS. Ayuda
+                a mantener bien organizadas las hojas de estilo grandes y
+                facilita compartir el diseño dentro y entre proyectos.
+              </li>
+              <li><b>Chakra UI:</b> Biblioteca de Componentes para React.</li>
+              <li>
+                <b>Remar.JS:</b> Procesador que analiza y compila Markdown.
+              </li>
+              <li>
+                <b>MDX:</b> Permite usar JSX en Markdown, ideal para escribir
+                contenido de formato largo.
+              </li>
+              <li>
+                <b>Tailwindcss:</b> Valores predeterminados tipográficos para
+                HTML.
+              </li>
+              <li>
+                <b>Jest:</b> Marco de prueba para la corrección de cualquier
+                código base de JavaScript.
+              </li>
+            </ul>
+          </div>        
 
-      <div class="bloque3 parrafos">
-        <div class="bloque3-item-left">
-          <h2>DESARROLLO WEB FRONT-END</h2>
-          <p>
-            Aprende a diseñar y estructurar tus páginas web del lado del
-            navegador. Construye aplicaciones y sitios web legibles y fácil de
-            usar para que el usuario pueda tener una experiencia satisfactoria.
-          </p>
-          <ul>
-            <li>
-              <b>Node.JS:</b> Es un entorno de ejecución multiplataforma para la capa
-              del servidor.
-            </li>
-            <li>
-              <b>React:</b> Biblioteca JavaScript para crear interfaces de
-              usuario.
-            </li>
-            <li>
-              <b>TypeScript:</b> Lenguaje de programación para desarrollar
-              aplicaciones JavaScript que añade tipos estáticos y objetos
-              basados en clases.
-            </li>
-            <li>
-              <b>SWR:</b> Biblioteca React Hooks para la obtención de datos.
-            </li>
-            <li>
-              <b>Sass:</b> Lenguaje de hojas de estilo compilado en CSS. Ayuda a
-              mantener bien organizadas las hojas de estilo grandes y facilita
-              compartir el diseño dentro y entre proyectos.
-            </li>
-            <li><b>Chakra UI:</b> Biblioteca de Componentes para React.</li>
-            <li><b>Remar.JS:</b> Procesador que analiza y compila Markdown.</li>
-            <li>
-              <b>MDX:</b> Permite usar JSX en Markdown, ideal para escribir
-              contenido de formato largo.
-            </li>
-            <li>
-              <b>Tailwindcss:</b> Valores predeterminados tipográficos para
-              HTML.
-            </li>
-            <li>
-              <b>Jest:</b> Marco de prueba para la corrección de cualquier
-              código base de JavaScript.
-            </li>
-          </ul>
-        </div>
+          <div class="block-image ">
+            <div class="multiples-imagenes">
+              <img src="/public/images/app/nodejs.jpg" alt="Nodejs" />
+              <img src="/public/images/app/react.jpg" alt="React" />
+              <img src="/public/images/app/chakra-ui.jpg" alt="Chakra UI" />
+          </div>
+        </article>
+      </section>
 
-        <div class="bloque3-item-right imagen-porcentaje">
-          <a href="">
-            <img src="/public/images/app/nodejs.jpg" alt="Nodejs" />
-          </a>
-          <a href="">
-            <img src="/public/images/app/react.jpg" alt="React" />
-          </a>
-          <a href="">
-            <img src="/public/images/app/chakra-ui.jpg" alt="Chakra UI" />
-          </a>
-        </div>
-      </div>
+      <section class="section-blocks block-background-yellow">
+        <article class="article-block-text-image">
+          <div class="block-image">
+            <div class="multiples-imagenes">               
+                <img src="/public/images/app/nextjs.jpg" alt="Nextjs" />
+                <img
+                  src="/public/images/app/Nextjs-Vercel.jpg"
+                  alt="Nextjs-Vercel"
+                />
+                <img src="/public/images/app/vercel.jpg" alt="Vercel" />
+            </div>
+          </div>
 
-      <div class="bloque2 parrafos fondo-amarillo">
-        <div class="bloque2-item-left imagen-porcentaje">
-          <a href="">
-            <img src="/public/images/app/nextjs.jpg" alt="Nextjs" />
-          </a>
-          <a href="">
-            <img
-              src="/public/images/app/Nextjs-Vercel.jpg"
-              alt="Nextjs-Vercel"
-            />
-          </a>
-          <a href="">
-            <img src="/public/images/app/vercel.jpg" alt="Vercel" />
-          </a>
-        </div>
-        <div class="bloque2-item-right">
-          <h2>FRAMEWORK Y PLATAFORMA FRONT-END</h2>
+          <div class="block-text">
+            <h2>FRAMEWORK Y PLATAFORMA FRONT-END</h2>
           <p>
             Hoy en día, es mucho más fácil aprender a programar, desarrollar
             aplicaciones y sitios web con diseños espectaculares. Y todo esto se
@@ -265,12 +259,14 @@
               de Next.js.
             </li>
           </ul>
-        </div>
-      </div>
+          </div>
+        </article>
+      </section>
 
-      <div class="bloque3 parrafos fondo-amarillo">
-        <div class="bloque3-item-left">
-          <h2>UN FUTURO PROFESIONAL CON GRANDES POSIBILIDADES</h2>
+      <section class="section-blocks block-background-yellow">
+        <article class="article-block-text-image">
+          <div class="block-text">
+            <h2>UN FUTURO PROFESIONAL CON GRANDES POSIBILIDADES</h2>
           <p>
             Aprender diseño y desarrollo web es divertido, emocionante y muy
             gratificante. Además, también desarrollas habilidades increíbles
@@ -280,69 +276,60 @@
             para de crecer. En cuanto a los ingresos que se pueden generar con
             esta profesión, estos son muy bien pagados en términos generales.
           </p>
-        </div>
+          </div>>
+          <div class="block-image">
+            <div class="multiples-imagenes">
+              <img src="/public/images/app/html.jpg" alt="" />
+              <img src="/public/images/app/css.jpg" alt="" />
+              <img src="/public/images/app/javascript.jpg" alt="" />
+            </div>
+            <div class="multiples-imagenes">
+              <img src="/public/images/app/nodejs.jpg" alt="" />
+              <img src="/public/images/app/react.jpg" alt="" />
+              <img src="/public/images/app/nextjs.jpg" alt="" />
+            </div>
+          </div>>
+        </article>
+      </section>   
 
-        <div class="bloque3-item-right imagen-porcentaje">
-          <a href="">
-            <img src="/public/images/app/html.jpg" alt="" />
-          </a>
-          <a href="">
-            <img src="/public/images/app/css.jpg" alt="" />
-          </a>
-          <a href="">
-            <img src="/public/images/app/javascript.jpg" alt="" />
-          </a>
-          <br />
-          <a href="">
-            <img src="/public/images/app/nodejs.jpg" alt="" />
-          </a>
-          <a href="">
-            <img src="/public/images/app/react.jpg" alt="" />
-          </a>
-          <a href="">
-            <img src="/public/images/app/nextjs.jpg" alt="" />
-          </a>
-        </div>
-      </div>
-
-      <div class="bloque2 parrafos">
-        <div class="bloque2-item-left" style="display: block">
-          <img
+      <section class="section-blocks ">
+        <article class="article-block-text-image">
+          <div class="block-image">
+            <img
             src="/public/images/logo-code-r11-04.png"
             alt=""
-            width="100%"
-            style="padding-right: 20px"
           />
-        </div>
-        <div class="bloque2-item-right">
-          <h2>
-            PROYECTO CODE R11: <br />
-            APRENDIZAJE ACTIVO
-          </h2>
-          <p>
-            El proyecto Code R11, nace con el objetivo de mostrarte el camino
-            más corto que debes recorrer para reducir la curva de aprendizaje.
-            Todo esto, mientras que adoptas buenas prácticas y enfocas tu
-            aprendizaje a una ruta predeterminada. Es decir, te ofrecemos una
-            ruta estructurada y bien definida de los lenguajes, herramientas y
-            tecnologías que debes usar en cada paso. La meta consiste en que te
-            conviertas en un desarrollador web profesional en el menor tiempo
-            posible. Y sobre todo, que logres una base sólida con el
-            conocimiento de: HTML, CSS y JavaScript.
-          </p>
-          <p>
-            Es por ello que en Code R11 hemos organizado toda la información
-            necesaria para tu aprendizaje activo. Y estamos orgullosos de que
-            esta plataforma te sirva de guía para tu aprendizaje.
-          </p>
-          <p>
-            Nuestra visión es hacer que el aprendizaje web en Latinoamérica se
-            convierta en un proceso divertido, desafiante y más colaborativo.
-            Así que, enfócate, practica y avanza con CODE R11.
-          </p>
-        </div>
-      </div>
+          </div>
 
+          <div class="block-text">
+            <h2>
+              PROYECTO CODE R11: <br />
+              APRENDIZAJE ACTIVO
+            </h2>
+            <p>
+              El proyecto Code R11, nace con el objetivo de mostrarte el camino
+              más corto que debes recorrer para reducir la curva de aprendizaje.
+              Todo esto, mientras que adoptas buenas prácticas y enfocas tu
+              aprendizaje a una ruta predeterminada. Es decir, te ofrecemos una
+              ruta estructurada y bien definida de los lenguajes, herramientas y
+              tecnologías que debes usar en cada paso. La meta consiste en que te
+              conviertas en un desarrollador web profesional en el menor tiempo
+              posible. Y sobre todo, que logres una base sólida con el
+              conocimiento de: HTML, CSS y JavaScript.
+            </p>
+            <p>
+              Es por ello que en Code R11 hemos organizado toda la información
+              necesaria para tu aprendizaje activo. Y estamos orgullosos de que
+              esta plataforma te sirva de guía para tu aprendizaje.
+            </p>
+            <p>
+              Nuestra visión es hacer que el aprendizaje web en Latinoamérica se
+              convierta en un proceso divertido, desafiante y más colaborativo.
+              Así que, enfócate, practica y avanza con CODE R11.
+            </p>
+          </div>
+        </article>
+      </section> 
       <footer id="footer-section1"></footer>
     </div>
     <script src="/app/menu.js"></script>
