--- a/libros.html
+++ b/libros.html
@@ -13,8 +13,8 @@
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
 
-      <main class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img
             class="img-50"
             src="/public/images/librosWebDeveloper.png"
@@ -22,11 +22,11 @@
           />
           <h1>Libros</h1>
           <p class="informativo">
-            Grandes libros para aprender desarrollo web con facilidad
+            Selección de libros para aprender desarrollo web.
           </p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="index.html" class="migas">>>Todas las Categorías</a>
             <div id="card-container" class="cards libros"></div>
