--- a/mdn.html
+++ b/mdn.html
@@ -14,8 +14,8 @@
 
     <div id="root">
         <header id="menuAppHeader" class="header"></header>
-        <main role="main" class="conMenu-Left">
-            <aside class="aside-left">
+        <main class="container">
+            <aside class="aside-default">
                 <img src="/public/images/sitios-web/mdn-web-docs.jpg" alt="w3schools" width="50%">
                 <h1>MDN Web Docs</h1>
                 <button type="button" class="botonLeerMas"><a href="cursosMDN.html">Curso: Desarrollo web
@@ -23,7 +23,7 @@
                 <p>MDN Web Docs, anteriormente Mozilla Developer Network, y antes Mozilla Developer Center, es el sitio
                     web oficial de Mozilla para la documentación de estándares web y de los proyectos de Mozilla.</p>
             </aside>
-            <section class="section-left">
+            <section class="section-default">
                 <article>
                     <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
                     <div id="card-container" class="cards cursos-mdn 1">
