--- a/mentores.html
+++ b/mentores.html
@@ -12,8 +12,8 @@
   <body id="mentores" class="inicio">
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
-      <main class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img
             class="img-50"
             src="/public/images/mentoresWebDeveloper.png"
@@ -25,7 +25,7 @@
           </p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="index.html" class="migas">>>Todas las categorías</a>
             <div id="card-container" class="cards mentores"></div>
