--- a/microsoft.html
+++ b/microsoft.html
@@ -13,8 +13,8 @@
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
 
-      <main role="main" class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img
             class="img-50"
             src="../public/images/sitios-web/microsoft.jpg"
@@ -27,7 +27,7 @@
           </p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
             <div id="card-container" class="cards cursos-microsoft 2"></div>
