--- a/proyecto-code-r11.html
+++ b/proyecto-code-r11.html
@@ -6,47 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto CODE R11</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/blocks.css" />
   </head>
 
   <body>
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
-      <main class="section-centrar">
-        <section class="section-left">
-          <article class="article-basico">
-            <h1 style="font-size: 50px">PROYECTO CODE R11</h1>
-            <h2>APRENDIZAJE ACTIVO</h2>
-            <div style="clear: both; display: flex; gap:25px">
-              <div style="flex:0.33">
-                <img
-                  src="/public/images/app/logo-Literal-Code-R11-base1.png"
-                  alt="Logo Literal Code R11"
-                />
-              </div>
-              <div style="flex:0.66">
-                <p>
-                  Bienvenidos a <strong style="color: black">Code R11</strong>,
-                  tu ruta de aprendizaje activo para dominar el diseño y
-                  desarrollo web. Un proyecto centrado en el ecosistema de
-                  JavaScript como pilar fundamental para tu aprendizaje.
-                </p>
-                <h3>Objetivos</h3>
-                <p>
-                  El proyecto Code R11, nace con el objetivo de mostrarte el
-                  camino más corto que debes recorrer para reducir la curva de
-                  aprendizaje. Todo esto, mientras que adoptas buenas prácticas
-                  y enfocas tu aprendizaje a una ruta predeterminada. Es un mapa
-                  de aprendizaje para desarrolladores web. Donde te ofrecemos
-                  una ruta estructurada y bien definida de los lenguajes,
-                  herramientas y tecnologías que debes usar en cada paso.
-                  Nuestra meta es lograr que te conviertas en un
-                  <strong style="color: black"
-                    >desarrollador web profesional</strong
-                  >
-                  en el menor tiempo posible.
-                </p>
-              </div>
+      
+        <section class="section-blocks">
+          <article class="article-block-text-image">
+            <div class="block-image">
+              <img
+                src="/public/images/app/logo-Literal-Code-R11-base1.png"
+                alt="Logo Literal Code R11"
+              />
             </div>
+            <div class="block-text">
+              <h1 style="font-size: 50px">PROYECTO CODE R11</h1>
+              <h2>APRENDIZAJE ACTIVO</h2>
+              <p>
+                Bienvenidos a <strong style="color: black">Code R11</strong>, tu
+                ruta de aprendizaje activo para dominar el diseño y desarrollo
+                web. Un proyecto centrado en el ecosistema de JavaScript como
+                pilar fundamental para tu aprendizaje.
+              </p>
+              <h3>Objetivo</h3>
+              <p>
+                El proyecto Code R11, nace con el objetivo de mostrarte el
+                camino más corto que debes recorrer para reducir la curva de
+                aprendizaje. Todo esto, mientras que adoptas buenas prácticas y
+                enfocas tu aprendizaje a una ruta predeterminada. Es un mapa de
+                aprendizaje para desarrolladores web. Donde te ofrecemos una
+                ruta estructurada y bien definida de los lenguajes, herramientas
+                y tecnologías que debes usar en cada paso. Nuestra meta es
+                lograr que te conviertas en un
+                <strong style="color: black"
+                  >desarrollador web profesional</strong
+                >
+                en el menor tiempo posible.
+              </p>
+            </div>
+          </article>
+        </section>
+        <section class="section-blocks">  
+          <article class="article-block-only-text">
             <h3>Misión</h3>
             <p>
               Nuestra misión es que todo nuevo programador se construya una base
@@ -216,7 +219,7 @@
             </blockquote>
           </article>
         </section>
-      </main>
+     
       <footer id="footer-section1"></footer>
     </div>
     <script src="../app/menu.js"></script>
