--- a/visual-studio-code.html
+++ b/visual-studio-code.html
@@ -13,8 +13,8 @@
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
 
-      <main role="main" class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img
             class="img-50"
             src="../public/images/app/visual-studio-code.jpg"
@@ -24,7 +24,7 @@
           <p class="informativo">Con VS Code Escala para trabajar en proyectos de cualquier tamaño y complejidad. Escriba menos, codifique más.  </p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="herramientas.html" class="migas"
               >>>Regresar a Herramientas</a
