--- a/w3c.html
+++ b/w3c.html
@@ -12,8 +12,8 @@
   <body id="sitios-web" class="inicio">
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
-      <main role="main" class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img src="/public/images/sitios-web/w3c.jpg" alt="W3C" width="50%" />
           <h1>World Wide Web Consortium</h1>
           <p>
@@ -23,7 +23,7 @@
           </p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="sitios-web.html" class="migas"
               >>>Regresar a Sitios Web</a
