--- a/web-dev.html
+++ b/web-dev.html
@@ -13,8 +13,8 @@
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
 
-      <main class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img
             class="img-50"
             src="../public/images/sitios-web/web-dev-google-developers.jpg"
@@ -22,12 +22,13 @@
           />
           <h1>Web Dev</h1>
           <p>
-            Google Developers. Explora las rutas de aprendizaje estructuradas para descubrir
-            todo lo que necesitas saber sobre cómo crear sitios Web modernos.
+            Google Developers. Explora las rutas de aprendizaje estructuradas
+            para descubrir todo lo que necesitas saber sobre cómo crear sitios
+            Web modernos.
           </p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
             <div id="card-container" class="cards cursos-web-dev 8"></div>
