--- a/hosting.html
+++ b/hosting.html
@@ -13,8 +13,8 @@
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
 
-      <main role="main" class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img
             class="img-50"
             src="../public/images/webHosting.png"
@@ -26,7 +26,7 @@
           </p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="index.html" class="migas">>>Todas las categorías</a>
             <div id="card-container" class="cards hosting"></div>
