--- a/ingles-cursos.html
+++ b/ingles-cursos.html
@@ -13,8 +13,8 @@
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
 
-      <main role="main" class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img
             class="img-50"
             src="../public/images/app/ingles-app.jpg"
@@ -31,7 +31,7 @@
           </p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="herramientas.html" class="migas"
               >>>Regresar a Herramientas</a
