--- a/sand-box.html
+++ b/sand-box.html
@@ -13,14 +13,14 @@
 <body id="sand-box" class="inicio">
     <div id="root">
         <header id="menuAppHeader" class="header"></header>
-        <main role="main" class="conMenu-Left">
-            <aside class="aside-left">
+        <main class="container">
+            <aside class="aside-default">
                 <img class="img-50" src="/public/images/sandBoxWebDeveloper.png" alt="Sandbox">
                 <h1>Sandbox</h1>
                 <p class="informativo">Experimenta y práctica tu código en un entorno de prueba.</p>
             </aside>
 
-            <section class="section-left">
+            <section class="section-default">
                 <article>
                     <a href="index.html" class="migas">>>Todas las categorías</a>
                     <div id="card-container" class="cards sand-box"></div>
