--- a/sitios-web.html
+++ b/sitios-web.html
@@ -14,15 +14,15 @@
 
     <div id="root">
         <header id="menuAppHeader" class="header"></header>
-        <main role="main" class="conMenu-Left">
-            <aside class="aside-left">
+        <main class="container">
+            <aside class="aside-default">
                 <img class="img-50" src="/public/images/sitios-web.png" alt="Sitios Web">
                 <h1>Sitios Web</h1>
                 <p class="informativo">Domina los principales lenguajes que todo desarrollador web necesita saber.
                     Estos son los sitios web más relavantes para un aprendizaje activo.</p>
             </aside>
 
-            <section class="section-left">
+            <section class="section-default">
                 <article>
                     <a href="index.html" class="migas">>>Todas las categorías</a>
                     <div id="card-container" class="cards sitios-web"></div>
