--- a/trabajos-remotos.html
+++ b/trabajos-remotos.html
@@ -12,8 +12,8 @@
   <body id="trabajos" class="inicio">
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
-      <main role="main" class="conMenu-Left">
-        <aside class="aside-left">
+      <main class="container">
+        <aside class="aside-default">
           <img
             class="img-50"
             src="../public/images/TrabajosRemotos.png"
@@ -23,7 +23,7 @@
           <p class="informativo"></p>
         </aside>
 
-        <section class="section-left">
+        <section class="section-default">
           <article>
             <a href="index.html" class="migas">>>Todas las categorías</a>
             <div id="card-container" class="cards trabajos"></div>
