nueva ruta para sitios web: javascript.info

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             para de crecer. En cuanto a los ingresos que se pueden generar con
             esta profesión, estos son muy bien pagados en términos generales.
           </p>
-          </div>>
+          </div>
           <div class="block-image">
             <div class="multiples-imagenes">
               <img src="/public/images/app/html.jpg" alt="" />
@@ -288,7 +288,7 @@
               <img src="/public/images/app/react.jpg" alt="" />
               <img src="/public/images/app/nextjs.jpg" alt="" />
             </div>
-          </div>>
+          </div>
         </article>
       </section>   
 
