nuevo: filtrar videos por categoría

--- a/videos-react.html
+++ b/videos-react.html
@@ -35,6 +35,7 @@
 
     <script src="/app/menu.js"></script>
     <script src="/app/dataBase/dbVideos.js"></script>
+    <script src="/app/mostrar-videos.js"></script>
     <script src="/app/script-videos.js"></script>
   </body>
 </html>
