--- a/videos-css.html
+++ b/videos-css.html
@@ -34,6 +34,7 @@
 
     <script src="/app/menu.js"></script>
     <script src="/app/dataBase/dbVideos.js"></script>
+    <script src="/app/mostrar-videos.js"></script>
     <script src="/app/script-videos.js"></script>
   </body>
 </html>
