--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Herramientas para Desarrolladores Web</title>
+    <title>Cursos freecodecamp</title>
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/cards.css" />
   </head>
 
-  <body id="herramientas" class="inicio">
+  <body id="sitios-web" class="inicio">
     <div id="root">
       <header id="menuAppHeader" class="header"></header>
 
@@ -17,27 +17,23 @@
         <aside class="aside-default">
           <img
             class="img-50"
-            src="./public/images/herramientasWebDeveloper.png"
-            alt="herramientas"
+            src="../public/images/sitios-web/freecodecamp.jpg"
+            alt="freecodecamp"
           />
-          <h1>Herramientas</h1>
-          <p>Descarga tus herramientas técnologicas y comienza a programar.</p>
+          <h1>FreeCodeCamp</h1>
+          <p>
+            FreeCodeCamp.org ayuda a las personas a aprender a programar de forma gratuita. En su página vas a encontrar miles de videos, artículos y lecciones de programación interactivas, todos disponibles de manera gratuita.
+          </p>
         </aside>
 
         <section class="section-default">
           <article>
-            <a href="index.html" class="migas">>>Todas las categorías</a>
-            <h2>Técnología</h2>
-            <div id="card-container" class="cards herramientas"></div>
-          </article>
-
-          <article>
-            <hr class="dividir-con-margen" />
-            <h2>Inglés para Programadores</h2>
-            <div id="card-container-ingles" class="cards ingles"></div>
+            <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
+            <div id="card-container" class="cards cursos-web-dev 10"></div>
           </article>
         </section>
       </main>
+
       <footer id="footer-section1"></footer>
     </div>
     <script src="../app/menu.js"></script>
