actualización del proyecto

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -17,7 +17,7 @@
         <aside class="aside-default">
           <img
             class="img-50"
-            src="../public/images/sitios-web/freecodecamp.jpg"
+            src="/public/images/sitios-web/freecodecamp.jpg"
             alt="freecodecamp"
           />
           <h1>FreeCodeCamp</h1>
@@ -36,8 +36,8 @@
 
       <footer id="footer-section1"></footer>
     </div>
-    <script src="../app/menu.js"></script>
-    <script src="../app/dataBase/dbRutas.js"></script>
-    <script src="../app/mostrar-por-grupo.js"></script>
+    <script src="/app/menu.js"></script>
+    <script src="/app/dataBase/dbRutas.js"></script>
+    <script src="/app/mostrar-por-grupo.js"></script>
   </body>
 </html>
