--- a/herramientas.html
+++ b/herramientas.html
@@ -21,7 +21,7 @@
             alt="herramientas"
           />
           <h1>Herramientas</h1>
-          <p>Descarga tus herramientas técnologicas y comienza a programar.</p>
+          <p>Herramientas tecnológicas básicas para mejorar tu desempeño como diseñador y programador web.</p>
         </aside>
 
         <section class="section-default">
