--- a/web-dev.html
+++ b/web-dev.html
@@ -38,8 +38,8 @@
 
       <footer id="footer-section1"></footer>
     </div>
-    <script src="../app/menu.js"></script>
-    <script src="../app/dataBase/dbRutas.js"></script>
-    <script src="../app/mostrar-por-grupo.js"></script>
+    <script src="/app/menu.js"></script>
+    <script src="/app/dataBase/dbRutas.js"></script>
+    <script src="/app/mostrar-por-grupo.js"></script>
   </body>
 </html>
