--- a/project-code-r11.html
+++ b/project-code-r11.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Code R11</title>
-    <link rel="stylesheet" href="/css/styles.css" />
-  </head>
 
-  <body>
-    <div id="root">
-      <header id="menuAppHeader" class="header"></header>
-      <main class="section-centrar">
-        <h1>PROJECT CODE R11</h1>
-        <p>So focus, practice and move forward with CODE R11.</p>
-        <h2>ACTIVE LEARNING</h2>
-        <p>
-          Welcome to Code R11, your active learning path to mastering web design
-          and development. A project focused on the JavaScript ecosystem as a
-          fundamental pillar for your learning.
-        </p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Project Code R11</title>
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/blocks.css">
+</head>
 
+<body>
+  <div id="root">
+    <header id="menuAppHeader" class="header"></header>
+    <main class="section-centrar centrar-texto">
+      <h1>PROJECT CODE R11</h1>
+      <p class="lead">So focus, practice and move forward with CODE R11.</p>
+
+      <h2>ACTIVE LEARNING</h2>
+      <p>
+        Welcome to Code R11, your active learning path to mastering web design
+        and development. A project focused on the JavaScript ecosystem as a
+        fundamental pillar for your learning.
+      </p>
+      <div class="block-columns">
         <h2>Objectives</h2>
         <p>
           The Code R11 project was born with the aim of showing you the shortest
@@ -54,36 +57,37 @@
         </p>
 
         <h2>
-          INFORMATION IS POWER, TAKE ADVANTAGE OF ALL THIS MATERIAL IN YOUR
-          FAVOR
+          Information is Power          
         </h2>
         <p>
-          The digital world has evolved, and it has never been so easy to learn
+          Take advantage of all this material in your favor. The digital world has evolved, and it has never been so easy to learn
           to program, develop applications and websites. And all this is due to
-          the valuable content that is freely available on the Internet. Of
-          course, this is possible thanks to a large community of developers and
+          the valuable content that is freely available on the Internet.</p>
+        <p>Of course, this is possible thanks to a large community of developers and
           the various technology companies that share their courses and
           documentation on web design and development. In such a way that it is
           possible to learn directly from the official source with first-hand
           information.
         </p>
+      </div>
+      <p>
+        At CODE R11, we strive to update this site with the best material
+        available for your learning and mastery of web development.
+      </p>
+      <p>Remember,</p>
+      <h3>
+        FOCUS on learning and mastering the fundamentals of web design and
+        development
+      </h3>
+      <h3>PRACTICE your code and adopt best practices</h3>
+      <h3>
+        And GO AHEAD, don't stop, become the best programmer you can be.
+      </h3>
 
-        <p>
-          At CODE R11, we strive to update this site with the best material
-          available for your learning and mastery of web development.
-        </p>
-        <p>Remember,</p>
-        <h3>
-          FOCUS on learning and mastering the fundamentals of web design and
-          development
-        </h3>
-        <h3>PRACTICE your code and adopt best practices</h3>
-        <h3>
-          And GO AHEAD, don't stop, become the best programmer you can be.
-        </h3>
-      </main>
-      <footer id="footer-section1"></footer>
-    </div>
-    <script src="/app/menu.js"></script>
-  </body>
+    </main>
+    <footer id="footer-section1"></footer>
+  </div>
+  <script src="/app/menu.js"></script>
+</body>
+
 </html>
