actualización enlaces para las categorías: sitios web y videos

--- a/videos-categorias.html
+++ b/videos-categorias.html
@@ -25,6 +25,7 @@
             <li><a href="#">Git</a></li>
             <li><a href="#">NodeJS</a></li>
             <li><a href="#">React</a></li>
+            <li><a href="#">TypeScript</a></li>
             <li><a href="#">Tools</a></li>
             <li><a href="#">BootCamp</a></li>
             <li><a href="#">Proyectos</a></li>
