mejoras al título del index y al menú de redes sociales

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <header id="menuAppHeader" class="header"></header>
 
     <div class="block-text-center">
-      <h1>Mapa de Aprendizaje para Desarrolladores Web</h1>
+      <h1>LITERAL CODE R11</h1>
+      <h2>Mapa de Aprendizaje para el Desarrollador Web</h2>
       <h2>Enfócate, practica y avanza</h2>
     </div>
 
